--- a/src/stylesheets/styles.styl
+++ b/src/stylesheets/styles.styl
@@ -11,7 +11,7 @@ textarea, input, button
 
 body
     margin 0
-    cursor url(../images/cursor-pointer-inactive.png) 23 23, auto
+    cursor none
 
 :root
     --text-color rgba(255, 255, 255, 0.3)
@@ -67,7 +67,7 @@ rotationAnimation()
     0% {
         transform translate(0, 0)
     }
-    
+
     100% {
         transform translate(5%, 5%)
     }
@@ -76,7 +76,7 @@ rotationAnimation()
     0% {
         opacity 0.25
     }
-    
+
     100% {
         opacity 0.05
     }
@@ -113,7 +113,7 @@ rotationAnimation()
     width 100%
 
 #controls
-    display flex
+    display none
     justify-content center
     padding 20px 0
     height var(--controls-height)
@@ -137,8 +137,6 @@ rotationAnimation()
     display flex
     justify-content center
     z-index var(--soundBoardContainerZIndex)
-
-    margin-top calc(var(--controls-height))
     position absolute
     top 0
     bottom 0
