--- a/src/stylesheets/styles.styl
+++ b/src/stylesheets/styles.styl
@@ -125,7 +125,7 @@ rotationAnimation()
     margin 0 20px
     border none
     padding 0
-    cursor url(../images/cursor-pointer-active.png) 23 23, auto
+    cursor none
 
 #controls .icon
     color var(--text-color)
@@ -212,7 +212,7 @@ rotationAnimation()
     margin 0
     width 100%
     height 100%
-    cursor url(../images/cursor-pointer-active.png) 23 23, auto
+    cursor none
 
     rotationAnimation()
 
